recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:10: error: ')' expected but 'if' found.
    if(steps < 3 && steps >=0){
    ^